SubBt/force-app/main/default/objects/VendorRfqList__c/VendorRfqList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>VendorRfqList</label>
</CustomObject>