SubBt/force-app/main/default/objects/VendorRfqList__c/fields/RFQListId__c.field-meta.xml
<CustomField>
    <fullName>RFQListId__c</fullName>
    <label>RFQListId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>