SubBt/force-app/main/default/objects/VendorRfqList__c/fields/RFQListName__c.field-meta.xml
<CustomField>
    <fullName>RFQListName__c</fullName>
    <label>RFQListName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>