SubBt/force-app/main/default/objects/VendorRfqList__c/fields/RFQUser__c.field-meta.xml
<CustomField>
    <fullName>RFQUser__c</fullName>
    <label>RFQUser</label>
    <length>18</length>
    <type>Text</type>
</CustomField>